--- a/app/components/Surface.module.css
+++ b/app/components/Surface.module.css
@@ -8,3 +8,33 @@
     @mixin light { border-color: rgba(0, 0, 0, 0.1); }
     @mixin dark { border-color: var(--mantine-color-dark-5); }
 }
+
+.surface.withBorder.blue {
+    background-color: color-mix(in srgb, var(--mantine-color-blue-filled) 10%, transparent);
+    border-color: var(--mantine-color-blue-filled);
+}
+
+.surface.withBorder.red {
+    background-color: color-mix(in srgb, var(--mantine-color-red-filled) 10%, transparent);
+    border-color: var(--mantine-color-red-filled);
+}
+
+.surface.withBorder.green {
+    background-color: color-mix(in srgb, var(--mantine-color-green-filled) 10%, transparent);
+    border-color: var(--mantine-color-green-filled);
+}
+
+.surface.withBorder.magenta {
+    background-color: color-mix(in srgb, var(--mantine-color-magenta-filled) 10%, transparent);
+    border-color: var(--mantine-color-magenta-filled);
+}
+
+.surface.withBorder.violet {
+    background-color: color-mix(in srgb, var(--mantine-color-violet-filled) 10%, transparent);
+    border-color: var(--mantine-color-violet-filled);
+}
+
+.surface.withBorder.orange {
+    background-color: color-mix(in srgb, var(--mantine-color-orange-filled) 10%, transparent);
+    border-color: var(--mantine-color-orange-filled);
+}
