--- a/app/components/Surface.module.css
+++ b/app/components/Surface.module.css
@@ -38,3 +38,13 @@
     background-color: color-mix(in srgb, var(--mantine-color-orange-filled) 10%, transparent);
     border-color: var(--mantine-color-orange-filled);
 }
+
+.surface.withBorder.grey {
+    background-color: color-mix(in srgb, var(--mantine-color-gray-4) 10%, transparent);
+    border-color: var(--mantine-color-gray-4);
+}
+
+.surface.withBorder.cyan {
+    background-color: color-mix(in srgb, var(--mantine-color-cyan-filled) 10%, transparent);
+    border-color: var(--mantine-color-cyan-filled);
+}
