--- a/app/routes/draft.$id/components/DraftOrder.module.css
+++ b/app/routes/draft.$id/components/DraftOrder.module.css
@@ -88,6 +88,36 @@
     }
 }
 
+.grey {
+    color: var(--mantine-color-gray-8);
+    @mixin dark { color: var(--mantine-color-gray-4); }
+}
+
+.grey.active {
+    border: 4px solid var(--mantine-color-gray-8);
+    background-color: var(--mantine-color-gray-5);
+    @mixin dark {
+        color: white;
+        background-color: var(--mantine-color-gray-7);
+        border-color: var(--mantine-color-gray-5);
+    }
+}
+
+.cyan {
+    color: var(--mantine-color-cyan-8);
+    @mixin dark { color: var(--mantine-color-cyan-2); }
+}
+
+.cyan.active {
+    border: 4px solid var(--mantine-color-cyan-8);
+    background-color: var(--mantine-color-cyan-1);
+    @mixin dark {
+        color: white;
+        background-color: var(--mantine-color-cyan-8);
+        border-color: var(--mantine-color-cyan-5);
+    }
+}
+
 .passed {
     color: var(--mantine-color-gray-6);
     @mixin dark {
