--- a/app/components/Surface.module.css
+++ b/app/components/Surface.module.css
@@ -48,3 +48,7 @@
     background-color: color-mix(in srgb, var(--mantine-color-cyan-filled) 10%, transparent);
     border-color: var(--mantine-color-cyan-filled);
 }
+
+.surface.withBorder.onlyBg {
+    border-width: 0px;
+}
