Cute Slice Names

--- a/app/components/Slice/Slice.module.css
+++ b/app/components/Slice/Slice.module.css
@@ -1,3 +1,7 @@
+.editableSliceName input {
+    font-family: "Orbitron", sans-serif;
+}
+
 .stats {
     align-items: center;
     gap: var(--mantine-spacing-xs);
