--- a/app/components/Surface.module.css
+++ b/app/components/Surface.module.css
@@ -51,7 +51,7 @@
     border-color: var(--mantine-color-orange-filled);
 }
 
-.surface.withBorder.grey {
+.surface.withBorder.gray {
     background-color: color-mix(in srgb, var(--mantine-color-gray-4) 10%, transparent);
     border-color: var(--mantine-color-gray-4);
 }
