--- a/app/components/Section.module.css
+++ b/app/components/Section.module.css
@@ -1,13 +1,12 @@
 .section {
-  border-top-left-radius: 8px;
+  border-radius: 4px;
+  border-bottom: 1px solid var(--mantine-color-default-border);
 
   @mixin dark {
     background: var(--mantine-color-dark-7);
-    border-bottom: 1px solid var(--mantine-color-dark-5);
   }
 
   @mixin light {
-    background: var(--mantine-color-spaceBlue-1);
-    border-bottom: 1px solid var(--mantine-color-spaceBlue-1);
+    background: var(--mantine-color-gray-0);
   }
 }
