--- a/app/routes/draft.prechoice/prechoice.module.css
+++ b/app/routes/draft.prechoice/prechoice.module.css
@@ -36,3 +36,15 @@
     display: none;
   }
 }
+
+.twoColGrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: var(--mantine-spacing-sm);
+}
+
+@media (min-width: 30em) {
+  .twoColGrid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
